--- a/AngulerJs/Templating/package.json
+++ b/AngulerJs/Templating/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.6.1",
-    "angular-aria": "^1.5.11",
     "angular-animate": "^1.5.11",
+    "angular-aria": "^1.5.11",
     "angular-material": "^1.1.1",
     "angular-messages": "^1.6.1",
+    "angular-route": "^1.6.1",
+    "angular-ui-router": "^0.4.2",
     "mdi": "^1.7.22"
   },
   "devDependencies": {},
